@startuml
enum OrderStatus {
  NEW
  PAID
  SHIPPED
  DELIVERED
}

class Customer {
  - id: String
  - name: String
  + equals(o: Object): boolean
  + hashCode(): int
}

class Product {
  - name: String
  - category: String
  - price: double
}

class Order {
  - orderId: String
  - customer: Customer
  - products: List<Product>
  - status: OrderStatus
  + getTotalPrice(): double
}

class OrderManager {
  - orders: List<Order>
  + getOrdersByStatus(status: OrderStatus): List<Order>
  + getUniqueProductNamesSorted(): List<String>
  + calculateTotalRevenue(): double
  + groupOrdersByCustomer(): Map<Customer, List<Order>>
  + getProductCountByCategory(): Map<String, Long>
  + getMostExpensiveOrderStream(): Optional<Order>
}

OrderManager o-- Order
Order --> Customer
Order o-- Product
Order --> OrderStatus
@enduml